<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".Activities.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="19"

            android:layout_height="0dp">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="14"
            android:weightSum="100"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="45"

                android:layout_height="match_parent">
            </LinearLayout>
            <TextView
                android:id="@+id/first_marker"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="40"
                android:textSize="23dp"
                android:layout_height="match_parent"
                android:text="@string/Patient_His_Fragment_s"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="15"

                android:layout_height="match_parent">
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="7"

            android:layout_height="0dp">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="14"
            android:weightSum="100"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="50"

                android:layout_height="match_parent">
            </LinearLayout>
            <TextView
                android:id="@+id/sec_marker"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="23dp"
                android:layout_weight="40"
                android:layout_height="match_parent"
                android:text="@string/Test_Fragment_tx_s"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="match_parent">
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="7"
            android:layout_height="0dp">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="14"
            android:weightSum="100"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="56"

                android:layout_height="match_parent">
            </LinearLayout>
            <TextView
                android:id="@+id/third_marker"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="23dp"
                android:layout_weight="40"
                android:layout_height="match_parent"
                android:text="@string/IM_Ex_Fragment_tx_s"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent">
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="25"

            android:layout_height="0dp">

        </LinearLayout>

    </LinearLayout>
    <FrameLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</RelativeLayout>
